RESOLVED FIXED 56469
REGRESSION(r76147): Dragging slider thumb is impossible or results in drawing artifacts.
https://bugs.webkit.org/show_bug.cgi?id=56469
Summary REGRESSION(r76147): Dragging slider thumb is impossible or results in drawing...
Dimitri Glazkov (Google)
Reported 2011-03-16 09:55:27 PDT
REGRESSION(r76147): Dragging slider thumb is impossible or results in drawing artifacts.
Attachments
Patch (7.02 KB, patch)
2011-03-16 10:00 PDT, Dimitri Glazkov (Google)
no flags
Dimitri Glazkov (Google)
Comment 1 2011-03-16 10:00:37 PDT
WebKit Commit Bot
Comment 2 2011-03-16 15:20:30 PDT
Comment on attachment 85936 [details] Patch Clearing flags on attachment: 85936 Committed r81285: <http://trac.webkit.org/changeset/81285>
WebKit Commit Bot
Comment 3 2011-03-16 15:20:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.